--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "devDependencies": {
-    "git-cz": "^4.9.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
-    "prettier": "^3.7.4"
-  },
+  "name": "spa-demo-repo",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "prepare": "git config --local include.path ../.gitconfig && git config core.hooksPath .husky && chmod -R +x .husky || true"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "vue": "^3.5.22"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^6.0.1",
+    "vite": "^7.1.7"
   }
 }
